[package]
name = "grizzly"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "grizzly"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
arrow = { version = "53", features = ["csv", "json", "ipc", "prettyprint"] }
arrow-csv = "53"
arrow-json = "53"
arrow-array = "53"
arrow-schema = "53"
arrow-arith = "53"
arrow-cast = "53"
arrow-ord = "53"
arrow-select = "53"
parquet = "53"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
calamine = "0.26"
rust_xlsxwriter = "0.64"
rayon = "1.10"
memmap2 = "0.9"
